# Pong

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  run.sh
Scripts/: build.sh  run.sh
scripts/: build.bash  run.bash
src/: ball.c  ball.h  game.c  game.h  main.c  pallet.c  pallet.h  render.c  render.h
src/Engine/: input.c  input.h  pallete.h  vector.c  window.c  window.h
